04 Nov 2003 mipsator
 * added makepath() in pathtools.
 * modified process_template() to use makepath().

27 Oct 2003 mipsator
 * updated Makefile.pmk to build in a test directory.
 * rewritten ac_parse_config() and fixed AC_COMPAT to be relative to
	pmkfile location
 * added defines for pmk's specific directories (builddir, ...).
 * updated samples of pmkfile and Makefiles.
 * use pmk values for autoconf directories.
 * modified arguments of ac_process_dyn_var() and process_dyn_var().
 * reorganised order of autoconf directories in Makefiles samples.

18 Oct 2003 mipsator
 * fixed computing of top_srcdir.
 * added processing of dynamic variables in pmk.
 * added creation of directories in template processing.
 * changed init_var() arguments.
 * updated pmkfile.

14 Oct 2003 mipsator
 * removed obsolete stuff (mostly compat with 0.6 syntax).

# PMK 0.7 released

12 Oct 2003 mipsator
 * removed stuff not related to autoconf into ac_set_variables().
 * added some more stuff in ac_set_variables().
 * changed init of alternative variables in func.

10 Oct 2003 mipsator
 * improved process_template().
 * fixed computing of top_srcdir in ac_process_dyn_var().
 * more changes in ac_set_variables().

# snapshot 0.6.6

07 Oct 2003 mipsator
 * more autoconf compat.
 * added target for pmkinstall in Makefile.pmk.
 * updated Makefile.
 * fixed missing '/' in pmkscan.h.

06 Oct 2003 mipsator
 * finished addition of third license clause.

05 Oct 2003 mipsator
 * added missing variables for autoconf compatibility.
 * added third license clause to almost all the files.
 * imported pmkinstall tools for further use.
 * added more third license clause into compat directory.

02 Oct 2003 mipsator
 * renamed pmk_check_include() by pmk_check_header().
 * removed a useless free() in single_append().

01 Oct 2003 mipsator
 * added premk-cvs@lists.sourceforge.net to get commit messages.
 * updated pmkfile man page.
 * added init_var() in pmk to set specific variables.